name:                prologue
version:             1.0.1
synopsis:            Replacement for the Haskell's Prelude, exposing more commonly used functions and patching old GHC ones to behave in the newest GHC's way.
-- description:         
license:             Apache-2.0
license-file:        LICENSE
author:              Wojciech Danilo
maintainer:          Wojciech Danilo <wojciech.danilo@gmail.com>
stability:           experimental
homepage:            https://github.com/wdanilo/prologue
bug-reports:         https://github.com/wdanilo/prologue/issues
copyright:           Copyright (C) 2014 Wojciech Danilo
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10


Library
  hs-source-dirs:     src
  ghc-options:        -Wall -O2
  default-language:   Haskell2010

  default-extensions: ConstraintKinds
                      DataKinds
                      DefaultSignatures
                      DeriveDataTypeable
                      DeriveFoldable
                      DeriveFunctor
                      DeriveGeneric
                      DeriveTraversable
                      DoAndIfThenElse
                      EmptyDataDecls
                      FlexibleContexts
                      FlexibleInstances
                      GeneralizedNewtypeDeriving
                      InstanceSigs
                      LambdaCase
                      MultiParamTypeClasses
                      NoImplicitPrelude
                      OverloadedStrings
                      StandaloneDeriving
                      TemplateHaskell
                      TupleSections
                      TypeOperators
                      ViewPatterns
  
  exposed-modules:    Prologue
                      Data.Text.Class
                      Data.String.Class
                      Data.Default.Instances.Missing
                      Data.Binary.Instances.Missing
                      Data.List.Class

  build-depends:      base >=4.6 && <4.9
                    , binary
                    , cond
                    , convert
                    , data-default
                    , data-repr
                    , errors
                    , lens
                    , mtl
                    , pretty-show
                    , transformers
                    , transformers-base
                    , text
                    , string-qq
                    , vector
