name:                prologue
version:             1.0.5
category:            control
-- description:         
license:             Apache-2.0
license-file:        LICENSE
author:              Wojciech Danilo
maintainer:          Wojciech Danilo <wojciech.danilo@gmail.com>
stability:           experimental
homepage:            https://github.com/wdanilo/prologue
bug-reports:         https://github.com/wdanilo/prologue/issues
copyright:           Copyright (C) 2014 Wojciech Danilo
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10
synopsis:            Better, more general Prelude exporting common utilities.
description:         Replacement for the Haskell's Prelude, exposing more commonly used functions and patching old GHC ones to behave in the newest GHC's way.

source-repository head
  type: git
  location: git://github.com/wdanilo/prologue.git

Library
  hs-source-dirs:     src
  ghc-options:        -Wall -O2
  default-language:   Haskell2010

  default-extensions: ConstraintKinds
                      DataKinds
                      DefaultSignatures
                      DeriveDataTypeable
                      DeriveFoldable
                      DeriveFunctor
                      DeriveGeneric
                      DeriveTraversable
                      DoAndIfThenElse
                      EmptyDataDecls
                      FlexibleContexts
                      FlexibleInstances
                      GeneralizedNewtypeDeriving
                      InstanceSigs
                      LambdaCase
                      MultiParamTypeClasses
                      NoImplicitPrelude
                      OverloadedStrings
                      StandaloneDeriving
                      TemplateHaskell
                      TupleSections
                      TypeOperators
                      ViewPatterns
  
  exposed-modules:    Prologue
                      Data.Text.Class
                      Data.String.Class
                      Data.Default.Instances.Missing
                      Data.Binary.Instances.Missing

  build-depends:      base >=4.6 && <4.9
                    , binary
                    , cond
                    , container
                    , convert
                    , data-default
                    , data-repr
                    , data-layer
                    , errors
                    , lens
                    , lens-utils
                    , mtl
                    , pretty-show
                    , transformers
                    , transformers-base
                    , text
                    , string-qq
                    , vector
                    , tuple
                    , functor-utils
