[workspace]

members = [
    "build-utilities",
    "lib/core",
    "lib/core/embedded-fonts",
    "lib/core/msdf-sys",
    "lib/eval-tt",
    "lib/optics",
    "lib/prelude",
    "lib/code-builder",
    "lib/shapely/impl",
    "lib/system/web",
]

[profile.dev]
opt-level = 1
lto       = false

[profile.release]
opt-level = 3
lto       = true

[profile.bench]
opt-level = 3
lto       = true
