[workspace]

members = [
    "build-utilities",
    "lib/core",
    "lib/core/embedded-fonts",
    "lib/core/msdf-sys",
    "lib/data",
    "lib/eval-tt",
    "lib/optics",
    "lib/prelude",
    "lib/code-builder",
    "lib/shapely/impl",
    "lib/system/web",
]

[profile.dev]
opt-level = 1
lto       = false
debug     = true

[profile.release]
opt-level = 3
lto       = true
# TODO: consider if we need it here. See discussion here: https://github.com/luna/basegl/pull/105
debug     = true

[profile.bench]
opt-level = 3
lto       = true
