[workspace]

members = [
    "build-utilities",
    "lib/core",
    "lib/core/embedded-fonts",
    "lib/core/msdf-sys",
    "lib/data",
    "lib/eval-tt",
    "lib/logger",
    "lib/optics",
    "lib/prelude",
    "lib/code-builder",
    "lib/shapely/impl",
    "lib/system/web",
]

[profile.dev]
opt-level = 3
lto       = false
debug     = true

[profile.release]
opt-level = 3
lto       = true
debug     = false

[profile.bench]
opt-level = 3
lto       = true
debug     = false
