[package]
name = "enso-integration-test"
version = "0.1.0"
edition = "2021"

[dependencies]
approx = "0.5.1"
engine-protocol = { path = "../app/gui/controller/engine-protocol" }
ensogl = { path = "../lib/rust/ensogl" }
enso-frp = { path = "../lib/rust/frp" }
enso-prelude = { path = "../lib/rust/prelude" }
enso-gui = { path = "../app/gui" }
enso-shortcuts = { path = "../lib/rust/shortcuts" }
enso-web = { path = "../lib/rust/web" }
ordered-float = "2.7.0"
wasm-bindgen = { version = "0.2.78" }
wasm-bindgen-test = "0.3.8"
