# Bazel build step defaults to having all envs left as placeholders, so that they can be replaced late after the vite build step.
VITE_ENVIRONMENT = "((%__VITE_ENVIRONMENT__%))"
VITE_API_URL = "((%__VITE_API_URL__%))"
VITE_SENTRY_DSN = "((%__VITE_SENTRY_DSN__%))"
VITE_STRIPE_KEY = "((%__VITE_STRIPE_KEY__%))"
VITE_CHAT_URL = "((%__VITE_CHAT_URL__%))"
VITE_COGNITO_USER_POOL_ID = "((%__VITE_COGNITO_USER_POOL_ID__%))"
VITE_COGNITO_USER_POOL_WEB_CLIENT_ID = "((%__VITE_COGNITO_USER_POOL_WEB_CLIENT_ID__%))"
VITE_COGNITO_DOMAIN = "((%__VITE_COGNITO_DOMAIN__%))"
VITE_COGNITO_REGION = "((%__VITE_COGNITO_REGION__%))"
VITE_VERSION = "((%__VITE_VERSION__%))"
VITE_COMMIT_HASH = "((%__VITE_COMMIT_HASH__%))"
VITE_CLOUD_BUILD = "((%__VITE_CLOUD_BUILD__%))"
VITE_GOOGLE_ANALYTICS_TAG = "((%__ENSO_CLOUD_GOOGLE_ANALYTICS_TAG__%))"
VITE_ENSO_AG_GRID_LICENSE_KEY = "((%__VITE_ENSO_AG_GRID_LICENSE_KEY__%))"
VITE_ENSO_MAPBOX_API_TOKEN = "((%__VITE_ENSO_MAPBOX_API_TOKEN__%))"
