load("@npm//:defs.bzl", "npm_link_all_packages", "npm_link_targets")
load("@npm//app/gui:vite/package_json.bzl", vite_bin = "bin")
load("@aspect_rules_ts//ts:defs.bzl", "ts_config")
load("@aspect_rules_js//js:defs.bzl", "js_binary", "js_run_binary")
load("@aspect_bazel_lib//lib:write_source_files.bzl", "write_source_files")

npm_link_all_packages(name = "node_modules")

ts_config(name = "tsconfig", src = "tsconfig.json", deps = ["//:tsconfig"])
ts_config(name = "tsconfig_node", src = "tsconfig.node.json", deps = [":tsconfig"])
ts_config(name = "tsconfig_app", src = "tsconfig.app.json", deps = [":tsconfig"])
ts_config(name = "tsconfig_scripts", src = "tsconfig.scripts.json")
ts_config(name = "tsconfig_app_vitest", src = "tsconfig.app.vitest.json", deps = [":tsconfig_app"])

ICON_GENERATED_DIR = "src/project-view/util/iconMetadata"

SRCS = [
    ":tsconfig",
    ":tsconfig_app",
    ":tsconfig_node",
    ":tsconfig_app_vitest",
    ":tsconfig_scripts",
    ":icon_metadata",
    "vite.config.ts",
    "package.json",
    "index.html",
] + glob(["src/**", "public/**", "project-manager-shim-middleware/**"], [ICON_GENERATED_DIR])

vite_bin.vite(
    name = "vite_build",
    srcs = SRCS + npm_link_targets(),
    args = ["build"],
    chdir = package_name(),
    out_dirs = ["dist"]
)

vite_bin.vite_binary(
    name = "vite_preview",
    args = ["preview"],
    chdir = package_name(),
    data = [":vite_build", "vite.config.ts"],
)

js_binary(
    name = "script_generate_icon_metadata",
    entry_point = "scripts/generateIconMetadata.mjs",
)

js_run_binary(
    name = "icon_metadata",
    tool = ":script_generate_icon_metadata",
    chdir = package_name(),
    srcs = ["src/project-view/assets/icons.svg"],
    out_dirs = [ICON_GENERATED_DIR],
    visibility = ["//visibility:public"],
)

# Convenience rule to output built artifacts to the filesystem, so JS tooling can see them.
# Important! Make sure the output of this rule is NOT used during the build process.
# This is part of the ICON_GENERATED_FILES definition.
write_source_files(
    name = "write_icon_metadata",
    files = {
        ICON_GENERATED_DIR: ":icon_metadata",
    },
    suggested_update_target = "//:write_all",
    visibility = ["//visibility:public"],
)


# vue_tsc_bin.vue_tsc_test(
#     name = "type-check",
#     args = ["--noEmit"],
#     chdir = package_name(),
#     data = SRCS + BUILD_DEPS,
#     include_declarations = True,
# )

# vite_bin.vite_binary(
#     name = "vite",
#     chdir = package_name(),
#     data = SRCS + BUILD_DEPS,
# )

# build_test(
#     name = "build_test",
#     targets = [
#         ":build",
#         ":type-check",
#     ],
# )
