[package]
name = "enso-gui"
version = "0.1.0"
authors = ["Enso Team <contact@enso.org>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
analytics = { version = "0.1.0", path = "analytics" }
ast = { path = "language/ast/impl" }
bimap = { version = "0.4.0" }
console_error_panic_hook = { version = "0.1.6" }
double-representation = { version = "0.1.0", path = "controller/double-representation" }
engine-protocol = { path = "controller/engine-protocol" }
enso-callback = { path = "../../lib/rust/callback" }
enso-config = { path = "config" }
enso-data-structures = { path = "../../lib/rust/data-structures" }
enso-debug-scene = { path = "view/debug_scene" }
enso-frp = { path = "../../lib/rust/frp" }
enso-logger = { path = "../../lib/rust/logger"}
enso-prelude = { path = "../../lib/rust/prelude"}
enso-shapely = { path = "../../lib/rust/shapely/impl"}
enso-text = { path = "../../lib/rust/text" }
enso-web = { path = "../../lib/rust/web" }
ensogl = { path = "../../lib/rust/ensogl" }
ensogl-drop-manager = { path = "../../lib/rust/ensogl/component/drop-manager" }
ensogl-examples = { path = "../../lib/rust/ensogl/example" }
ensogl-component = { path = "../../lib/rust/ensogl/component" }
ensogl-text-msdf-sys = { path = "../../lib/rust/ensogl/component/text/msdf-sys" }
failure = { version = "0.1.6" }
flo_stream = { version = "0.4.0" }
futures = { version = "0.3.1" }
fuzzly = { path = "../../lib/rust/fuzzly" }
ide-view = { path = "view" }
itertools = { version = "0.10.0" }
js-sys = { version = "0.3.28" }
json-rpc = { path = "../../lib/rust/json-rpc" }
mockall = { version = "0.7.1", features = ["nightly"] }
nalgebra = { version = "0.26.1", features = ["serde-serialize"] }
parser = { path = "language/parser" }
profiling = { path = "../../lib/rust/profiling",  default-features = false }
semver = { version = "1.0.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
sha3 = { version = "0.8.2" }
span-tree = { path = "language/span-tree" }
uuid = { version = "0.8", features = ["serde", "v4", "wasm-bindgen"] }
wasm-bindgen = { version = "=0.2.58" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
websocket = "0.23.0"

[dev-dependencies]
regex = { version = "1.3.6" }
wasm-bindgen-test = { version = "0.3.8" }

[dependencies.web-sys]
version = "0.3.22"
features = [
  'BinaryType',
  'Blob',
  'console',
  'CloseEvent',
  'Document',
  'Element',
  'ErrorEvent',
  'EventTarget',
  'MessageEvent',
  'HtmlElement',
  'Node',
  'WebSocket',
  'Window',
]

[features]
enable-section-profiling = ["profiling/enable-section-profiling"]
enable-task-profiling = ["profiling/enable-task-profiling"]
enable-detail-profiling = ["profiling/enable-detail-profiling"]
enable-debug-profiling = ["profiling/enable-debug-profiling"]
