[package]
name = "enso-gui"
version = "0.1.0"
authors = ["Enso Team <contact@enso.org>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
analytics = { path = "analytics" }
double-representation = { path = "controller/double-representation" }
enso-config = { path = "config" }
enso-callback = { path = "../../lib/rust/callback" }
enso-data-structures = { path = "../../lib/rust/data-structures" }
enso-debug-api = { path = "../../lib/rust/debug-api" }
enso-debug-scene = { path = "view/examples" }
enso-frp = { path = "../../lib/rust/frp" }
enso-doc-parser = { path = "../../lib/rust/parser/doc-parser" }
enso-prelude = { path = "../../lib/rust/prelude" }
enso-profiler = { path = "../../lib/rust/profiler" }
enso-executor = { path = "../../lib/rust/executor" }
enso-notification = { path = "../../lib/rust/notification" }
enso-shapely = { path = "../../lib/rust/shapely" }
enso-text = { path = "../../lib/rust/text" }
enso-web = { path = "../../lib/rust/web" }
enso-suggestion-database = { path = "suggestion-database" }
ensogl = { path = "../../lib/rust/ensogl" }
ensogl-examples = { path = "../../lib/rust/ensogl/examples" }
ensogl-component = { path = "../../lib/rust/ensogl/component" }
ensogl-icons = { path = "../../lib/rust/ensogl/component/icons" }
ensogl-dynamic-assets = { path = "../../lib/rust/ensogl/component/dynamic-assets" }
ensogl-text-msdf = { path = "../../lib/rust/ensogl/component/text/src/font/msdf" }
ensogl-hardcoded-theme = { path = "../../lib/rust/ensogl/app/theme/hardcoded" }
ensogl-drop-manager = { path = "../../lib/rust/ensogl/component/drop-manager" }
fuzzly = { path = "../../lib/rust/fuzzly" }
ast = { path = "language/ast/impl" }
parser = { path = "language/parser" }
ide-view = { path = "view" }
engine-protocol = { path = "controller/engine-protocol" }
json-rpc = { path = "../../lib/rust/json-rpc" }
span-tree = { path = "language/span-tree" }
bimap = { version = "0.4.0" }
console_error_panic_hook = { workspace = true }
const_format = { workspace = true }
convert_case = { workspace = true }
failure = { workspace = true }
flo_stream = { version = "0.4.0" }
futures = { workspace = true }
itertools = { workspace = true }
js-sys = { workspace = true }
mockall = { version = "0.7.1", features = ["nightly"] }
nalgebra = { workspace = true }
semver = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = { workspace = true }
sha3 = { version = "0.8.2" }
superslice = { workspace = true }
uuid = { version = "0.8", features = ["serde", "v4", "wasm-bindgen"] }
ordered-float = "3.4.0"
# wasm-bindgen version 0.2.79 is causing issues with clippy.
# See for more information. https://github.com/rustwasm/wasm-bindgen/issues/2774
# Should be removed once 0.2.80 is available.
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = "0.4"

[dev-dependencies]
regex = { workspace = true }
wasm-bindgen-test = { workspace = true }

[dependencies.web-sys]
version = "0.3.22"
features = [
  'BinaryType',
  'Blob',
  'console',
  'CloseEvent',
  'Document',
  'Element',
  'ErrorEvent',
  'EventTarget',
  'MessageEvent',
  'HtmlElement',
  'Node',
  'WebSocket',
  'Window',
]

# Stop wasm-pack from running wasm-opt, because we run it from our build scripts in order to customize options.
[package.metadata.wasm-pack.profile.release]
wasm-opt = false
