load("@npm//:defs.bzl", "npm_link_all_packages", "npm_link_targets")
load("@npm//app/gui2:vite/package_json.bzl", vite_bin = "bin")
load("@aspect_rules_ts//ts:defs.bzl", "ts_config")
load("@aspect_rules_js//js:defs.bzl", "js_library")

npm_link_all_packages(name = "node_modules")

ts_config(name = "tsconfig", src = "tsconfig.json", deps = ["//app:tsconfig"])
ts_config(name = "tsconfig_node", src = "tsconfig.node.json", deps = [":tsconfig"])
ts_config(name = "tsconfig_app", src = "tsconfig.app.json", deps = [":tsconfig"])
ts_config(name = "tsconfig_app_vitest", src = "tsconfig.app.vitest.json", deps = [":tsconfig_app"])

SRCS = [
    "//app:tsconfig",
    ":tsconfig_app",
    ":tsconfig_node",
    "vite.config.ts",
    "package.json",
] + glob(["src/**", "shared/**", "public/**", "project-manager-shim-middleware/**"])

# BUILD_DEPS = [":node_modules/" + d for d in [
#     "@vitejs/plugin-vue",
#     "@vue/tsconfig",
#     "vite",
#     "vue",
#     "vue-router",
# ]]

BUILD_DEPS = npm_link_targets()
# print(BUILD_DEPS)

js_library(
    name = "vite.config",
    srcs = ["vite.config.ts"],
    deps = BUILD_DEPS,
)

vite_bin.vite(
    name = "build",
    srcs = SRCS + [":vite.config"],
    args = ["build"],
    chdir = package_name(),
    out_dirs = ["dist"]
)

# vue_tsc_bin.vue_tsc_test(
#     name = "type-check",
#     args = ["--noEmit"],
#     chdir = package_name(),
#     data = SRCS + BUILD_DEPS,
#     include_declarations = True,
# )

# vite_bin.vite_binary(
#     name = "vite",
#     chdir = package_name(),
#     data = SRCS + BUILD_DEPS,
# )

# build_test(
#     name = "build_test",
#     targets = [
#         ":build",
#         ":type-check",
#     ],
# )