load("@npm//:defs.bzl", "npm_link_all_packages", "npm_link_targets")
load("@npm//app/gui2:vite/package_json.bzl", vite_bin = "bin")
load("@aspect_rules_ts//ts:defs.bzl", "ts_config")
load("@aspect_rules_js//js:defs.bzl", "js_library")

npm_link_all_packages(name = "node_modules")

ts_config(name = "tsconfig", src = "tsconfig.json", deps = ["//app:tsconfig"])
ts_config(name = "tsconfig_node", src = "tsconfig.node.json", deps = [":tsconfig"])
ts_config(name = "tsconfig_app", src = "tsconfig.app.json", deps = [":tsconfig"])
ts_config(name = "tsconfig_scripts", src = "tsconfig.scripts.json")
ts_config(name = "tsconfig_app_vitest", src = "tsconfig.app.vitest.json", deps = [":tsconfig_app"])

SRCS = [
    ":tsconfig",
    ":tsconfig_app",
    ":tsconfig_node",
    ":tsconfig_app_vitest",
    ":tsconfig_scripts",
    "vite.config.ts",
    "package.json",
    "index.html",
] + glob(["src/**", "public/**", "project-manager-shim-middleware/**"])

# BUILD_DEPS = [":node_modules/" + d for d in [
#     "@vitejs/plugin-vue",
#     "@vue/tsconfig",
#     "vite",
#     "vue",
#     "vue-router",
# ]]

vite_bin.vite(
    name = "vite_build",
    srcs = SRCS + npm_link_targets(),
    args = ["build"],
    chdir = package_name(),
    out_dirs = ["dist"]
)

vite_bin.vite_binary(
    name = "vite_preview",
    args = ["preview"],
    chdir = package_name(),
    data = [":vite_build", "vite.config.ts"],
)

# vue_tsc_bin.vue_tsc_test(
#     name = "type-check",
#     args = ["--noEmit"],
#     chdir = package_name(),
#     data = SRCS + BUILD_DEPS,
#     include_declarations = True,
# )

# vite_bin.vite_binary(
#     name = "vite",
#     chdir = package_name(),
#     data = SRCS + BUILD_DEPS,
# )

# build_test(
#     name = "build_test",
#     targets = [
#         ":build",
#         ":type-check",
#     ],
# )