load("@rules_rust//rust:defs.bzl", "rust_shared_library")
load("@aspect_rules_js//js:defs.bzl", "js_library")
load("@aspect_rules_js//npm:defs.bzl", "npm_package")
load("@rules_rust//wasm_bindgen:defs.bzl", "rust_wasm_bindgen")
load("@crates//:defs.bzl", "aliases", "all_crate_deps")

rust_shared_library(
    name = "rust_lib",
    srcs = glob(["src/**/*.rs"]),
    aliases = aliases(),
    edition = "2021",
    proc_macro_deps = all_crate_deps(proc_macro = True),
    deps = all_crate_deps(normal = True) + [
        "//lib/rust/parser:enso-parser",
        "//lib/rust/parser/doc-parser:enso-doc-parser",
    ],
)

rust_wasm_bindgen(
    name = "rust-ffi-bindgen",
    target = "bundler",
    wasm_file = ":rust_lib",
)

js_library(
    name = "rust-ffi",
    srcs = [
        ":rust-ffi-bindgen",
        "package.json"
    ],
)

npm_package(
    name = "pkg",
    srcs = [":rust-ffi"],
    include_runfiles = False,
    visibility = ["//visibility:public"],
)
