load("@rules_rust//rust:defs.bzl", "rust_shared_library")
load("@aspect_rules_js//js:defs.bzl", "js_library")
load("@aspect_rules_js//npm:defs.bzl", "npm_package")
load("@rules_rust//wasm_bindgen:defs.bzl", "rust_wasm_bindgen")
load("@crates//:defs.bzl", "aliases", "all_crate_deps")
load("@aspect_bazel_lib//lib:copy_to_directory.bzl", "copy_to_directory")

rust_shared_library(
    name = "rust_lib",
    srcs = glob(["src/**/*.rs"]),
    aliases = aliases(),
    edition = "2021",
    proc_macro_deps = all_crate_deps(proc_macro = True),
    deps = all_crate_deps(normal = True) + [
        "//lib/rust/parser:enso-parser",
        "//lib/rust/parser/doc-parser:enso-doc-parser",
    ],
)

rust_wasm_bindgen(
    name = "rust-ffi",
    target = "bundler",
    wasm_file = ":rust_lib",
)

copy_to_directory(
    name = "rust-ffi-dist",
    srcs = [":rust-ffi"],
    out = "dist",
)

npm_package(
    name = "pkg",
    srcs = ["package.json", ":rust-ffi-dist"],
    visibility = ["//visibility:public"],
)
